made up arrow move car forward and back arrow move car backward.

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "three": "^0.181.1"
   },
   "devDependencies": {
     "vite": "^6.4.1"
-  }
+  },
+  "description": ""
 }
